udacity-c3-deployment/k8s/backend-user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: backend-user
  name: backend-user
spec:
  replicas: 2
  selector:
    matchLabels:
      service: backend-user
  template:
    metadata:
      labels:
        service: backend-user
    spec:
      containers:
      - image: stko086/udacity-restapi-user
        name: backend-user 
        imagePullPolicy: Always  
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "2048Mi"
            cpu: "1"      
      restartPolicy: Always
