udacity-c3-deployment/k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      service: frontend
  template:
    metadata:
      labels:
        service: frontend
        api: external        
    spec:
      containers:
      - image: stko086/udacity-frontend
        name: frontend
        imagePullPolicy: Always          
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "1024Mi"
            cpu: "500m"                
      restartPolicy: Always
