udacity-c3-deployment/k8s/backend-user-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: backend-user
  name: backend-user
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    service: backend-user
  #type: NodePort
