udacity-c3-deployment/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: frontend
  name: frontend
spec:
  ports:
  - name: "8100"
    port: 8100
    targetPort: 80
  selector:
    service: frontend
  type: NodePort
#  type: LoadBalancer
