udacity-c3-deployment/k8s/reverseproxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: reverseproxy
  name: reverseproxy
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    service: reverseproxy
#  type: NodePort
#  type: LoadBalancer
