udacity-c3-deployment/k8s/ingress-object.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: "frontend"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app: frontend
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "frontend"
              servicePort: 8100
